# deep-research-agent

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FINAL_CHANGE_REPORT.md  PLANS.md  README.md  README.zh-CN.md  SECURITY.md  main.py  pyproject.toml  research_policy.py
.agent/: EXECUTION_BACKLOG.md  IMPLEMENT.md  PHASE_PLAN.md  PREFLIGHT_DOC_AUDIT.md  STATUS.md
.github/: pull_request_template.md
agents/: __init__.py  critic.py  planner.py  researcher.py  verifier.py  writer.py
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: main.rs
artifacts/: README.md  __init__.py  bundle.py  schemas.py
auditor/: README.md  __init__.py  models.py  pipeline.py  store.py
capabilities/: README.md  __init__.py  mcp.py  registry.py  skills.py
configs/: default.yaml  mcp_servers.example.yaml  release_gate.yaml  settings.py
connectors/: README.md  __init__.py  files.py  legacy.py  models.py  registry.py  snapshot_store.py  utils.py
docs/: API.md  ARCHITECTURE.md  ARTIFACTS.md  DOCS_INDEX.md  REPO_MAP.md  USER_GUIDE.md  api.md  architecture.md  development.md  interview_qa.md  resume_bullets.md  showcase.md
evals/: README.md
evaluation/: README.md  __init__.py  comparators.py  cost_tracker.py  llm_judge.py  metrics.py
examples/: README.md  basic_research.py  batch_requests.json  source_profile.md  topic.txt
legacy/: README.md  __init__.py  benchmark-notes.md  migration-map.md
llm/: README.md  __init__.py  provider.py
memory/: README.md  __init__.py  evidence_store.py  store.py
policies/: README.md  __init__.py  budget_guardrails.py  models.py  source_policy.py
prompts/: README.md  __init__.py  project_audit.py  templates.py
schemas/: README.md  artifact-manifest.schema.json  audit-event.schema.json  benchmark-integrity-report.schema.json  benchmark-portfolio-summary.schema.json  benchmark-run-manifest.schema.json  benchmark-task-result.schema.json  benchmark-task-spec.schema.json  claim-review-queue.schema.json  claim-support.schema.json  claim.schema.json  conflict-set.schema.json  connector-health-record.schema.json  critical-claim-review-item.schema.json  evidence-fragment.schema.json  job-checkpoint.schema.json  job-progress-event.schema.json  job-runtime-record.schema.json  plan-step.schema.json  report-bundle.schema.json  research-job.schema.json  source-document.schema.json  source-policy-overrides.schema.json  source-policy-profile.schema.json  source-snapshot.schema.json
scripts/: build_benchmark_portfolio_summary.py  build_native_benchmark_summary.py  build_native_optimization_summary.py  build_value_scorecard.py  check_tauri_env.sh  compare_agents.py  full_comparison.py  optimize_local3.py  release_gate.py  run_ablation.py  run_benchmark.py  run_browsecomp_guarded.py  run_external_benchmark.py  run_facts_grounding.py  run_gaia_subset.py  run_gptr_isolated.py  run_local_release_smoke.py  run_longbench_v2.py  run_longfact_safe.py  run_native_regression.py  run_portfolio12_release.py  run_value_ablation_pack.py  run_value_metrics.py  (+1 more)
(+790 files in other folders)
