[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-agent"
version = "0.1.0"
description = "An evidence-first deep research runtime for company and industry analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
    { name = "emmmdty" },
]
keywords = ["deep-research", "evidence-first", "audit", "research-runtime", "python"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "arxiv>=2.4.1",
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.11.2",
    "fastapi>=0.115.0,<1.0.0",
    "httpx>=0.28.1",
    "jsonschema>=4.26.0",
    "langchain-core>=0.2.10,<1.0.0",
    "langchain-openai>=0.1.10,<0.4.0",
    "loguru>=0.7.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.0.0",
    "pypdf2>=3.0.1",
    "pyyaml>=6.0.3",
    "python-dotenv>=1.2.2",
    "rich>=14.3.3",
    "tavily-python>=0.7.22",
    "uvicorn>=0.30.0,<1.0.0",
    "langchain-anthropic>=0.1.0,<0.4.0",
]

[project.urls]
Homepage = "https://github.com/emmmdty/deep-research-agent"
Repository = "https://github.com/emmmdty/deep-research-agent"
Issues = "https://github.com/emmmdty/deep-research-agent/issues"

[project.scripts]
deep-research-agent = "deep_research_agent.gateway.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["deep_research_agent*"]
