[package]
name = "deep-research-agent-desktop"
version = "0.1.0"
description = "Desktop shell for the Deep Research Agent local GUI"
authors = ["Deep Research Agent"]
edition = "2021"

[lib]
name = "deep_research_agent_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-opener = "2.5.3"
